# PROG2

Arvore/Arvore_ConsultaPrefixo/: CMakeLists.txt  Readme.md  Terminal.cpp  Terminal.h  dados.txt  main.cpp  termtest.cpp
Arvore/Arvores_Bal/: CMakeLists.txt  main.cpp  old.txt
Arvore/UltimasAlfabeticamente/: CMakeLists.txt  main.cpp  termtest.cpp
Lista_Encadeada/: CMakeLists.txt  lista.cpp  lista.h  main.cpp
Projeto1/CopiaCSV/: Terminal.h  main.cpp  termtest.cpp
Projeto1/Teste/: CMakeLists.txt
Projeto2/: README.md  main.cpp  prglib.h  sistema.cpp  sistema.h  teste.csv  teste2.csv
Projeto2/libs/: arvore-impl.h  arvore.h
Projeto3/: main.cpp  sistema.cpp  sistema.h  splay-impl.h  splay.h  teste.csv
Prova1/CopiaCSV/: Readme.md
Prova1/Teste/: main.cpp
Tabela Hash/AgregadorPalavras/: main.cpp  termtest.cpp
Tabela Hash/AnalisadorAcessos/: main.cpp  termtest.cpp  usuarios.txt
Tabela Hash/ContaNumerosIntervalo/: main.cpp  termtest.cpp
Tabela Hash/ContaPalavras/: main.cpp  termtest.cpp
Tabela Hash/ContabilizadorQuilometros/: main.cpp  termtest.cpp
Tabela Hash/GeradorTexto2/: main.cpp  termtest.cpp
Tabela Hash/Hash_ClassificaFilmes/: CMakeLists.txt  Readme.md  categoria.cpp  categoria.h  filmes.txt  questao.cpp  questao.h  test.cpp
Tabela Hash/PalavrasMaisFrequentes/: main.cpp  termtest.cpp
Tabela Hash/RemoveRepetidas/: main.cpp  termtest.cpp
Tabela Hash/SumarizadorGastos/: cliente.txt  main.cpp  (+1 more)
Tarefa6/CaminhosArquivos/: CMakeLists.txt  Terminal.cpp  Terminal.h  pathname.cpp  pathname.h  test.cpp
Tarefa6/CaminhosArquivos/Teste/: main.cpp
(+153 files in other folders)
